* fix memory leak in XRDMLFile by abandoning minidom
* edf-parser improvements: support for multiple images per file
* spec-parser improvements, keep file closed when not parsing it
* peak_fit: linear background feature
* peak_fit function: enhancement of automatic initial parameter determination
* improvements in the Material.environment function (occupancy awareness)
* reciprocal space conversion for goniometers with translation-axis in the
  detector arms (point, linear, area detectors)
* reciprocal space conversion of energy scans for point, linear, area
  detectors
* addition of serval test routines to improve the code quality

v1.1.0, 2014-10-09

* fix bug in Q2Ang with refrac = True (omega angle could have been reported
  incorrect and added some geometry checks/warnings)
* more flexibility in sample position/orientation definition
* documentation updates
* small bug fixes in matplotlib import code
* c-header-code cleanup
* reformat c-code to conform to PEP7
* reformat python code to conform to PEP8

v1.1.0-beta, 2014-09-16

* new 1D Gridder working consistent with 2D and 3D
* add easy Powder Diffraction cif file parser
* addition of several test routines to improve the code quality
* new mathematical functions in math subpackage
* fixes for possible segfault in the Gridder classes
* considerable reduce size of elements.db file
* FastScan parser for spec-mesh scans and FastScan/kmap data from ESRF 
  (thanks to RG for help with testing and implementation ideas)
* code-cleanup
* minimal bug-fixes in io (xrdml)
* documentation updates
* add environment function to Materials: function calculates the atomic
  neighbors around a given position in the unit cell
* documentation update regarding the Q2Ang and Q2AngFit functions
* fixed inconsistency bug in NonCOP and HXRD's Q2Ang function (thanks to FZ)
* SPEC-file parser improvements 
* python3.X compatibilty in single code-base

v1.0.6, 2014-04-15

* new way of accessing spec-scans when parsing the spec file